--- a/TimeDiagrammWPF_View/App.config
+++ b/TimeDiagrammWPF_View/App.config
@@ -7,6 +7,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="IntervalsDBModelContainer" connectionString="metadata=res://*/IntervalsDBModel.csdl|res://*/IntervalsDBModel.ssdl|res://*/IntervalsDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=d:\#Documents\IntervalsDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="IntervalsDBModelContainer" connectionString="metadata=res://*/IntervalsDBModel.csdl|res://*/IntervalsDBModel.ssdl|res://*/IntervalsDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\IntervalsDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
