--- a/TimeDiagrammGeneratorLibrary/TimeDiagrammGeneratorLibrary.csproj
+++ b/TimeDiagrammGeneratorLibrary/TimeDiagrammGeneratorLibrary.csproj
@@ -41,7 +41,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GraphicObjects\AuxiliaryLine.cs" />
+    <Compile Include="GraphicObjects\AxisX.cs" />
+    <Compile Include="ChartString.cs" />
+    <Compile Include="GraphicObjects\AxisXMark.cs" />
+    <Compile Include="GraphicObjects\AxisXMarkCaption.cs" />
+    <Compile Include="GraphicObjects\CaptionY.cs" />
+    <Compile Include="GraphicObjects\Chart.cs" />
+    <Compile Include="GraphicObjects\ChartArea.cs" />
+    <Compile Include="GraphicObjects\ChartAreaSplitted.cs" />
+    <Compile Include="GraphicObjects\ChartObject.cs" />
+    <Compile Include="GraphicObjects\GanttChartArea.cs" />
+    <Compile Include="GraphicObjects\IntervalG.cs" />
+    <Compile Include="GraphicObjects\SeparatorX.cs" />
+    <Compile Include="GraphicObjects\SeparatorY.cs" />
+    <Compile Include="GraphModel.cs" />
+    <Compile Include="GanttChartModel.cs" />
     <Compile Include="Interval.cs" />
+    <Compile Include="GanttChartGenerator.cs" />
+    <Compile Include="SplittedGanttChartModel.cs" />
     <Compile Include="TimeDiagramGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
