--- a/TimeDiagrammGeneratorLibrary/TimeDiagrammGeneratorLibrary.csproj
+++ b/TimeDiagrammGeneratorLibrary/TimeDiagrammGeneratorLibrary.csproj
@@ -41,11 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BarChartGenerator.cs" />
     <Compile Include="GraphicObjects\AuxiliaryLine.cs" />
     <Compile Include="GraphicObjects\AxisX.cs" />
     <Compile Include="ChartString.cs" />
     <Compile Include="GraphicObjects\AxisXMark.cs" />
     <Compile Include="GraphicObjects\AxisXMarkCaption.cs" />
+    <Compile Include="GraphicObjects\Bar.cs" />
     <Compile Include="GraphicObjects\CaptionY.cs" />
     <Compile Include="GraphicObjects\Chart.cs" />
     <Compile Include="GraphicObjects\ChartArea.cs" />
