--- a/TimeDiagrammWPF_View/App.config
+++ b/TimeDiagrammWPF_View/App.config
@@ -1,12 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    </configSections>
+    <section name="entityFramework"
+      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+      requirePermission="false"/>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6"/>
+    </providers>
+  </entityFramework>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+      <remove invariant="System.Data.SQLite.EF6"/>
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6"
+        description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6"/>
+    </DbProviderFactories>
+  </system.data>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <connectionStrings>
-    <add name="IntervalsDBModelContainer" connectionString="metadata=res://*/IntervalsDBModel.csdl|res://*/IntervalsDBModel.ssdl|res://*/IntervalsDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\IntervalsDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="IntervalsDBModelContainer"
+      connectionString="metadata=res://*/IntervalsDBModel.csdl|res://*/IntervalsDBModel.ssdl|res://*/IntervalsDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\IntervalsDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient"/>
+    <add name="MDT6DBEntities"
+      connectionString="metadata=res://*/MDT6DbModel.csdl|res://*/MDT6DbModel.ssdl|res://*/MDT6DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MDT6\SQLEXPRESS;initial catalog=MDT6DB;persist security info=True;user id=unsknet;password=yhnbgt;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient"/>
+    <add name="ScanerTubeInfoEntities"
+      connectionString="metadata=res://*/ScanerTubeInfoDbModel.csdl|res://*/ScanerTubeInfoDbModel.ssdl|res://*/ScanerTubeInfoDbModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;d:\#Documents\Visual Studio 2015\Projects\TimeDiagramm\DB\ScanerTubeInfo.sqlite&quot;'"
+      providerName="System.Data.EntityClient"/>
   </connectionStrings>
 </configuration>
