--- a/IntervalsDBTypesLibrary/App.Config
+++ b/IntervalsDBTypesLibrary/App.Config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="IntervalsDBModelContainer" connectionString="metadata=res://*/IntervalsDBModel.csdl|res://*/IntervalsDBModel.ssdl|res://*/IntervalsDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\IntervalsDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="IntervalsDBModelContainer" connectionString="metadata=res://*/IntervalsDBModel.csdl|res://*/IntervalsDBModel.ssdl|res://*/IntervalsDBModel.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;d:\#Documents\Visual Studio 2015\Projects\TimeDiagramm\DB\IntervalsDB.mdf&quot;;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
