--- a/TimeDiagrammWPF_View/App.config
+++ b/TimeDiagrammWPF_View/App.config
@@ -33,5 +33,6 @@
     <add name="ScanerTubeInfoEntities"
       connectionString="metadata=res://*/ScanerTubeInfoDbModel.csdl|res://*/ScanerTubeInfoDbModel.ssdl|res://*/ScanerTubeInfoDbModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;d:\#Documents\Visual Studio 2015\Projects\TimeDiagramm\DB\ScanerTubeInfo.sqlite&quot;'"
       providerName="System.Data.EntityClient"/>
+    <add name="JournalDbEntities" connectionString="metadata=res://*/JournalDbModel.csdl|res://*/JournalDbModel.ssdl|res://*/JournalDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=local;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
