--- a/IntervalsDBTypesLibrary/IntervalsDBTypesLibrary.csproj
+++ b/IntervalsDBTypesLibrary/IntervalsDBTypesLibrary.csproj
@@ -85,6 +85,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="IntervalSource.cs" />
     <Compile Include="IntervalsRepository.cs" />
     <Compile Include="IntervalWithDescription.cs">
       <DependentUpon>IntervalsDBModel.tt</DependentUpon>
