--- a/IntervalsDBTypesLibrary/App.Config
+++ b/IntervalsDBTypesLibrary/App.Config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    </configSections>
   <connectionStrings>
     <add name="IntervalsDBModelContainer" connectionString="metadata=res://*/IntervalsDBModel.csdl|res://*/IntervalsDBModel.ssdl|res://*/IntervalsDBModel.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;d:\#Documents\Visual Studio 2015\Projects\TimeDiagramm\DB\IntervalsDB.mdf&quot;;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
   </connectionStrings>
