--- a/TimeDiagrammWPF_View/App.config
+++ b/TimeDiagrammWPF_View/App.config
@@ -8,16 +8,20 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <entityFramework>
     <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6"/>
+      <provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6, Version=1.0.109.0, Culture=neutral" />
     </providers>
   </entityFramework>
   <system.data>
     <DbProviderFactories>
-      
-      
-    <remove invariant="System.Data.SQLite.EF6"/>
-    <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6"
-      description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6"/></DbProviderFactories>
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".Net Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+      <remove invariant="System.Data.SQLite.EF6"/>
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6"
+          description=".NET Framework Data Provider for SQLite (Entity Framework 6)"
+          type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6"/>
+    </DbProviderFactories>
   </system.data>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
@@ -36,4 +40,16 @@
       connectionString="metadata=res://*/JournalDbModel.csdl|res://*/JournalDbModel.ssdl|res://*/JournalDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=local;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient"/>
   </connectionStrings>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IDataSourceService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://scanerto2:8080/" binding="basicHttpBinding"
+          bindingConfiguration="BasicHttpBinding_IDataSourceService"
+          contract="ServiceReference1.IDataSourceService" name="BasicHttpBinding_IDataSourceService" />
+    </client>
+  </system.serviceModel>
 </configuration>
