--- a/TimeDiagrammGeneratorLibraryTests/TimeDiagrammGeneratorLibraryTests.csproj
+++ b/TimeDiagrammGeneratorLibraryTests/TimeDiagrammGeneratorLibraryTests.csproj
@@ -51,8 +51,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="GraphicObjects\ScaleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScaleTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TimeDiagrammGeneratorLibrary\TimeDiagrammGeneratorLibrary.csproj">
