--- a/TimeDiagrammGeneratorLibrary/TimeDiagrammGeneratorLibrary.csproj
+++ b/TimeDiagrammGeneratorLibrary/TimeDiagrammGeneratorLibrary.csproj
@@ -51,14 +51,14 @@
     <Compile Include="GraphicObjects\AxisXMark.cs" />
     <Compile Include="GraphicObjects\AxisXMarkCaption.cs" />
     <Compile Include="GraphicObjects\Bar.cs" />
-    <Compile Include="GraphicObjects\BarCaption.cs" />
+    <Compile Include="GraphicObjects\BarWithCaption.cs" />
+    <Compile Include="GraphicObjects\Caption.cs" />
     <Compile Include="GraphicObjects\CaptionY.cs" />
     <Compile Include="GraphicObjects\Chart.cs" />
     <Compile Include="GraphicObjects\ChartArea.cs" />
     <Compile Include="GraphicObjects\ChartAreaSplitted.cs" />
     <Compile Include="GraphicObjects\ChartObject.cs" />
     <Compile Include="GraphicObjects\Brick.cs" />
-    <Compile Include="GraphicObjects\GraphParameters.cs" />
     <Compile Include="GraphicObjects\TimeChartArea.cs" />
     <Compile Include="GraphicObjects\HistogramPoint.cs" />
     <Compile Include="GraphicObjects\IntervalG.cs" />
