--- a/TimeDiagrammGeneratorLibraryTests/TimeDiagrammGeneratorLibraryTests.csproj
+++ b/TimeDiagrammGeneratorLibraryTests/TimeDiagrammGeneratorLibraryTests.csproj
@@ -51,6 +51,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BarChartTests.cs" />
+    <Compile Include="GraphicObjects\BarTests.cs" />
     <Compile Include="GraphicObjects\ScaleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
