--- a/TimeDiagrammWPF_View/TimeDiagrammWPF_View.csproj
+++ b/TimeDiagrammWPF_View/TimeDiagrammWPF_View.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -103,10 +104,12 @@
     </ApplicationDefinition>
     <Compile Include="ClearLocalBDCommand.cs" />
     <Compile Include="CopyToClipBoardCommand.cs" />
+    <Compile Include="DirrectorySeeker.cs" />
     <Compile Include="FileSeeker.cs" />
     <Compile Include="GenerateDiagrammCommand.cs" />
     <Compile Include="IDateTimeInterval.cs" />
     <Compile Include="LoadDataCommand.cs" />
+    <Compile Include="SaveToFileCommand.cs" />
     <Compile Include="VM.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
